[package]
name = "ts-server-query"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Minimal async TeamSpeak ServerQuery client for Tokio"
readme = "README.md"
repository = "https://github.com/rihi/ts-server-query"
license = "MIT"
keywords = ["teamspeak", "ts3", "serverquery", "query"]
categories = ["api-bindings", "asynchronous", "network-programming"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "src/**",
    "tests/**",
]

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["net", "rt"] }
